k8s/app_golang/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-golang-deployment
  labels:
    app: app-golang
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-golang
  template:
    metadata:
      labels:
        app: app-golang
    spec:
      containers:
      - name: app-golang
        image: yesliesnayder/webservicego:1.0.0
        ports:
        - containerPort: 8000
