k8s/app_golang/service.yml
apiVersion: v1
kind: Service
metadata:
  name: golang-app-service
spec:
  selector:
    app: golang
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
