k8s/app_golang/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-golang-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /home
spec:
  rules:
    - host: app-golang
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-golang-service
                port:
                  number: 8000
